# stock-investment-agent

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  DEPLOY_GCP.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  invest_develop_PLAN.md  pyproject.toml
_workspace/: ux_data_balance.md  ux_frontend_layout.md  ux_llm_balance.md  ux_qa_report.md  uxd_data-engineer_spark.md  w06_data-engineer_pipeline.md  w06_qa-inspector_report.md  w08_data-engineer_bundle.md  w08_frontend-engineer_report.md  w09_1_llm_ai_agent_python_agent_rag_ocr.py  w09_frontend-engineer_report.md  w09_frontend-engineer_sse.md  w09_llm-engineer_chat.md  w09_llm-engineer_sse.md  w09_qa-inspector_report.md  w09_qa-inspector_sse.md  w10_data-engineer_watchlist.md  w10_frontend-engineer_watchlist.md  w10_improvement_backlog.md  w10_llm-engineer_report.md  w10_qa-inspector_report.md
api/: CLAUDE.md  _helpers.py  _sse.py  admin.py  auth.py  balance.py  chat.py  conversations.py  deps.py  detail.py  kis_credentials.py  macro_outlook.py  main.py  report.py  reports.py  stats.py  stocks.py  watchlist.py
auth/: CLAUDE.md  __init__.py  admin_seed.py  deps.py  kis_models.py  kis_seed.py  kis_store.py  models.py  security.py  usage.py
cache/: CLAUDE.md  base.py  keys.py  local.py  policy.py  service.py
chat/: CLAUDE.md  analyst_combined.py  analyst_combined_schema.py  analyst_report.py  analyst_schema.py  analyst_service.py  analyst_store.py  build_prompt.py  chat.py  history_models.py  history_store.py  intent.py  intent_gen.py  intent_panel.py  intent_train.py  market_outlook.py  (+16 more)
(+285 files in other folders)
